[project]
name = "streetwatch-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
]
